@@ -6,6 +6,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.deckfour.xes.classification.XEventClassifier;
@@ -29,14 +30,16 @@ import com.google.common.collect.Multimap;
 
 public class AllWriteOperationMiner implements WriteOperationMiner {
 
-	private static final Set<String> STANDARD_EXCLUDED_ATTRIBUTES = Set.of(XConceptExtension.KEY_NAME, XConceptExtension.KEY_INSTANCE, XTimeExtension.KEY_TIMESTAMP, XLifecycleExtension.KEY_MODEL, XLifecycleExtension.KEY_TRANSITION );
-	
+	private static final Set<String> STANDARD_EXCLUDED_ATTRIBUTES = Set.of(XConceptExtension.KEY_NAME,
+			XConceptExtension.KEY_INSTANCE, XTimeExtension.KEY_TIMESTAMP, XLifecycleExtension.KEY_MODEL,
+			XLifecycleExtension.KEY_TRANSITION);
+
 	private final XLog log;
 
 	private final Set<String> excludedAttributes;
 
 	private final XEventClassifier classifier;
-	
+
 	public AllWriteOperationMiner(XLog log) {
 		this(log, new XEventNameClassifier(), STANDARD_EXCLUDED_ATTRIBUTES);
 	}
@@ -49,58 +52,56 @@ public class AllWriteOperationMiner implements WriteOperationMiner {
 	}
 
 	public StochasticLabelledDataPetriNet extendWithWrites(StochasticLabelledDataPetriNet net) {
-		
+
 		// both event and trace attributes
 		Map<String, Class<?>> vars = XUtils.getEventAttributeTypes(log);
 		vars.putAll(XUtils.getTraceAttributeTypes(log));
-		
-		Map<String, Class<?>> numericVars = Maps.filterValues(vars, clazz -> clazz.isAssignableFrom(Double.class) || clazz.isAssignableFrom(Long.class));
-		
-		List<String> variableLabels = numericVars.keySet().stream()
-				.filter(s -> !excludedAttributes.contains(s))
-				.toList();
+
+		Map<String, Class<?>> numericVars = Maps.filterValues(vars,
+				clazz -> clazz.isAssignableFrom(Double.class) || clazz.isAssignableFrom(Long.class));
+
+		List<String> variableLabels = numericVars.keySet().stream().filter(s -> !excludedAttributes.contains(s))
+				.collect(Collectors.toList());
 		Map<String, Integer> variableIndicies = toIndexMap(variableLabels);
-		
+
 		//same order as above
 		List<VariableType> variableTypes = variableLabels.stream()
-				.map(varLabel -> VariableType.fromClass(vars.get(varLabel)))
-				.toList();
-		
+				.map(varLabel -> VariableType.fromClass(vars.get(varLabel))).collect(Collectors.toList());
+
 		System.out.println("WriteOperationMiner: Considering attributes " + variableLabels);
-		
+
 		Map<String, Integer> transitionMap = SLDPNReplayUtils.buildTransitionMap(net);
 		Multimap<Integer, Integer> writes = HashMultimap.create(); //TODO use multiset of counting
-		
-		for (XTrace t: log) {
+
+		for (XTrace t : log) {
 			// no write operations here which is fine!
-			for (XEvent e: t) {
+			for (XEvent e : t) {
 				Integer tIdx = transitionMap.get(classifier.getClassIdentity(e));
-				
+
 				Set<String> attributeLabels = e.getAttributes().keySet();
 				Sets.SetView<String> matchingAttrs = Sets.intersection(variableIndicies.keySet(), attributeLabels);
-				
-				for (String attr: matchingAttrs) {
+
+				for (String attr : matchingAttrs) {
 					writes.put(tIdx, variableIndicies.get(attr)); //TODO prepare for frequency counting
 				}
 			}
 		}
-		
+
 		List<int[]> varReads = new ArrayList<>();
-		List<int[]> varWrites = new ArrayList<>();				
+		List<int[]> varWrites = new ArrayList<>();
 
 		for (int i = 0; i < net.getNumberOfTransitions(); i++) {
 			// we read everything
 			varReads.add(IntStream.range(0, variableLabels.size()).toArray());
-			
+
 			Collection<Integer> observedWrites = writes.get(i);
-			
+
 			//TODO not sure if it should/needs to be be sorted
-			varWrites.add(observedWrites.stream().mapToInt(idx->idx).sorted().toArray()); 
+			varWrites.add(observedWrites.stream().mapToInt(idx -> idx).sorted().toArray());
 		}
-		
-		return new StochasticLabelledDataPetriNetWeightsDataDependent(net, 
-				variableLabels, variableTypes, 
-				varReads, varWrites);
+
+		return new StochasticLabelledDataPetriNetWeightsDataDependent(net, variableLabels, variableTypes, varReads,
+				varWrites);
 	}
 
 	private Map<String, Integer> toIndexMap(List<String> variableLabels) {
@@ -116,4 +117,3 @@ public class AllWriteOperationMiner implements WriteOperationMiner {
 	}
 
 }
- 
